--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+html{
+  scroll-behavior: smooth;
+}
+section{
+  scroll-margin-top: 4rem;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,3 +17,4 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
